Bugfix https://github.com/jameslave/marriage-clock/issues/1: Fix day count disappearing on iOS

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
   align-items: center;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;
   font-size: 100px;
-  font-weight: 700;
-  text-transform: uppercase;
+  /* font-weight: 700; */
+  /* text-transform: uppercase; */
 }
 
 #text {
